--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
 
         
 
-        <p>Want to see the code? Check it out on GitHub: <a href="https://github.com/example/password-generator" target="_blank">https://github.com/example/password-generator</a></p>
+        <p>Want to see the code? Check it out on GitHub: <a href="https://github.com/Dev-Geniy/Random-Password-Generator/" target="_blank">https://github.com/Dev-Geniy/Random-Password-Generator/</a></p>
 
-        <p class="note">Note: Replace the link above with your own GitHub repository URL in the HTML file (search for "https://github.com/example/password-generator").</p>
+        <p class="note">This microservice allows users to generate random passwords based on selected criteria (such as including uppercase letters, lowercase letters, numbers, and symbols), with the ability to customize the password length (between 8 and 20 characters), and copy the generated password to the clipboard.</p>
 
     </main>
 
