--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <header>
-
+     <div class="sharethis-inline-reaction-buttons"></div>
         <button id="theme-toggle" aria-label="Toggle Theme">
 
             <span class="icon">☀️</span>
@@ -114,6 +114,7 @@
 
     </footer>
     
+    <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=67d40920bc169300120859b6&product=inline-reaction-buttons&source=platform" async="async"></script>
 
     <script src="script.js"></script>
 
